--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,51 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Success Analytics</title>
+
+    <meta
+      name="description"
+      content="Success Analytics is dedicated to transforming education with innovative technologies, personalized learning experiences, and interactive tools. Join us to make education accessible to everyone!"
+    />
+    <meta
+      name="keywords"
+      content="edtech, education, learning, personalized learning, interactive tools, social learning, online learning, technology, flexible learning, Success Analytics, edtech company, leading edtech, edtech platform"
+    />
+    <meta name="author" content="Success Analytics" />
+    <meta name="robots" content="index, follow" />
+    <meta name="theme-color" content="#0047AB" />
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="apple-mobile-web-app-title" content="Success Analytics" />
+    <meta name="application-name" content="Success Analytics" />
+    <meta name="msapplication-TileColor" content="#0047AB" />
+    <meta
+      name="msapplication-TileImage"
+      content="https://successanalytics.in/path/to/your/tile-image.png"
+    />
+    <meta
+      name="msapplication-config"
+      content="https://successanalytics.in/path/to/your/browserconfig.xml"
+    />
+    <meta
+      property="og:title"
+      content="Revolutionizing Learning | Success Analytics - Leading EdTech Company"
+    />
+    <meta
+      property="og:description"
+      content="Success Analytics is dedicated to transforming education with innovative technologies, personalized learning experiences, and interactive tools. Join us to make education accessible to everyone!"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://successanalytics.in" />
+    <meta
+      property="og:image"
+      content="https://successanalytics.in/path/to/your/social-image.png"
+    />
+    <meta property="og:image:alt" content="Success Analytics" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:site_name" content="Success Analytics" />
+    <meta property="og:locale" content="en_US" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
